--- a/job-application-form/bootstrap-job-application-form-2.html
+++ b/job-application-form/bootstrap-job-application-form-2.html
@@ -14,8 +14,20 @@
     <div class="container">
       <h1 class="mt-4 mb-4">Job Application Form</h1>
       <div class="jumbotron">
-        <h2 class="mb-4">Software Developer</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque id imperdiet magna, eu pulvinar urna. Sed cursus libero non fermentum feugiat.</p>
+        <p>
+          We believe that meaningful contributions stem from a work culture that values independence, 
+          autonomy, and flexibility. We trust you to take ownership of your projects, providing the independence to 
+          shape your work and its impact on our products. Our flat organizational structure underlines our emphasis 
+          on autonomy, empowering you to control how your work is done, minimizing bureaucracy and maximizing efficiency. 
+          Embracing the digital era, we uphold work-life balance through flexible work hours and remote working opportunities. 
+          This independence and autonomy are not just for operational ease, but are intended to stimulate innovation by giving 
+          you the creative space to conceive ideas that push boundaries. As firm believers in continuous learning, 
+          we offer an array of learning resources to keep you up-to-date with industry developments. 
+          Our team thrives on collaboration, creating an environment where ideas are shared freely. 
+          Lastly, our focus is on creating innovative, impactful software products that meet our clients' needs. 
+          The work is challenging but equally rewarding. If these values resonate with you, we 
+          invite you to join us in shaping the future of software product development.
+        </p>
       </div>
       <form>
         <div class="form-group">
@@ -68,10 +80,5 @@
       </form>
     </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   </body>
 </html>
